--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "core-js": "^2.4.1",
     "open-weather-icons": "0.0.7",
     "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.4.2",
